--- a/final/styles/index-large.css
+++ b/final/styles/index-large.css
@@ -40,7 +40,8 @@
     body {
         margin: 0;
         padding: 0;
-        background: var(--chess-black);
+        background-color: var(--chess-black);
+        color: var(--chess-white);
     }
 
     /* When using an explicit <img class="bg-image"> make it cover the viewport */
@@ -192,6 +193,8 @@
         border: solid 1px var(--chess-white);
         border-radius: 6px;
         color: var(--chess-white);
+        font-size: 1.2rem;
+        font-weight: 700;
     }
 
     .insert-into-hero a:hover {
