--- a/final/styles/learn-large.css
+++ b/final/styles/learn-large.css
@@ -45,6 +45,8 @@
         background-position: center center;
         background-size: cover;
         background-attachment: fixed;
+        background-color: var(--chess-black);
+        color: var(--chess-white);
     }
 
     h1,
@@ -192,6 +194,8 @@
         border-radius: 8px;
         width: 200px;
         border: none;
+        font-size: 1.2rem;
+        font-weight: 700;
     }
 
     #display-grid dialog {
