--- a/final/styles/ty.large.css
+++ b/final/styles/ty.large.css
@@ -17,6 +17,8 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+        background-color: var(--chess-black);
+        color: var(--chess-white);
     }
 
     main {
